@startuml

title __SETTINGS's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace user {
        namespace settings {
          class com.pis.buy2gether.usecases.home.user.settings.CheckImageActivity {
              # onCreate()
              - check_Userimage()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace user {
        namespace settings {
          class com.pis.buy2gether.usecases.home.user.settings.SettingsFragment {
              ~ btn_cancel_avatar_dialog : Button
              ~ btn_cancel_changepsw_dialog : ImageButton
              ~ btn_cancel_check_img : ImageButton
              ~ btn_change_image : Button
              ~ btn_check_image : Button
              ~ btn_edit_pfp : ShapeableImageView
              ~ btn_save_change_psw : ImageButton
              ~ confirm_psw : EditText
              ~ img_check_avatar : ImageView
              ~ new_psw : EditText
              ~ userCity : EditText
              ~ userName : EditText
              - GALLERY_IMAGE_CODE : int
              - TAKE_IMAGE_CODE : int
              + onActivityResult()
              + onClick()
              + onCreateView()
              + onDestroyView()
              + showFailureAlert()
              + showSuccessAlert()
              ~ saveUserImageDB()
              - change_UserPassword()
              - change_Usercity()
              - change_Userimage()
              - change_Username()
              - check_Userimage()
              - getDownloadURL()
              - setUserPfp()
              - setupAvatarConfigurationPopup()
              - setupChangePswPopup()
              - setupCheckImagePopup()
              - showCheckImage()
              - showMediaDialog()
              - sign_out()
              - update_UserCity()
              - update_Username()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace user {
        namespace settings {
          class com.pis.buy2gether.usecases.home.user.settings.SettingsViewModel {
              - context : Context
              + SettingsViewModel()
              + clearSession()
              ~ change_UserCity()
              ~ change_Username()
              ~ update_UserInformation()
              - getUser()
          }
        }
      }
    }
  }
  

  com.pis.buy2gether.usecases.home.user.settings.CheckImageActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.pis.buy2gether.usecases.home.user.settings.CheckImageActivity o-- com.pis.buy2gether.databinding.ActivityCheckImageBinding : binding
  com.pis.buy2gether.usecases.home.user.settings.SettingsFragment .up.|> android.view.View.OnClickListener
  com.pis.buy2gether.usecases.home.user.settings.SettingsFragment -up-|> androidx.fragment.app.Fragment
  com.pis.buy2gether.usecases.home.user.settings.SettingsFragment o-- com.pis.buy2gether.databinding.FragmentSettingsBinding : binding
  com.pis.buy2gether.usecases.home.user.settings.SettingsFragment o-- com.pis.buy2gether.usecases.home.user.settings.SettingsViewModel : viewModel
  com.pis.buy2gether.usecases.home.user.settings.SettingsViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
